# energy-informatics-ii

./: .gitignore  README.md  pyproject.toml
notebooks/: polars-tutorial.py  swiss-food.csv
src/: README
